<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".activities.TelevisionDetailActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/progress_overlay"/>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">
            <RelativeLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_height="300dp"
                    android:layout_width="200dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:src="@color/cardview_dark_background"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/iv_poster"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_example"
                        android:textSize="24dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tv_in_production"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/in_production"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="Rating"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating_example"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Number of Seasons"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tv_num_seasons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Number of Episodes"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tv_num_episodes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        />

                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/top_layout"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="@string/lorem"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
